--- a/helm-release-supabase.yaml
+++ b/helm-release-supabase.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: supabase-helm-release
-  namespace: supdabase
+  namespace: supabase
 spec:
   interval: 5m 
   chart:
@@ -11,7 +11,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: helm-repo-supabase
-        namespace: supdabase
+        namespace: supabase
   values:
     
   images:
