--- a/supbase/helm-release-supabase.yaml
+++ b/supbase/helm-release-supabase.yaml
@@ -8,6 +8,7 @@ spec:
   chart:
     spec:
       chart: supabase
+      version : "0.3.15"
       sourceRef:
         kind: HelmRepository
         name: helm-repo-supabase
