--- a/supbase/helm-release-supabase.yaml
+++ b/supbase/helm-release-supabase.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 5m 
   chart:
     spec:
-      chart: supabase
+      chart: rock8s
       #version : "0.3.15"
       sourceRef:
         kind: HelmRepository
