--- a/supbase/helm-release-supabase.yaml
+++ b/supbase/helm-release-supabase.yaml
@@ -1,14 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: supabase
+  name: supabase-rel
   namespace: supabase
 spec:
   interval: 5m 
   chart:
     spec:
-      chart: rock8s
-      version : "0.3.15"
+      chart: supabase
+      version : 0.3.15
       sourceRef:
         kind: HelmRepository
         name: helm-repo-supabase
