--- a/supbase/git_repo.yaml
+++ b/supbase/git_repo.yaml
@@ -9,5 +9,9 @@ spec:
   ref:
     branch: main
   secretRef:
-    name: ray-llm
-
+    name: supabase
+  ignore: |
+    # exclude all
+    /*
+    # include primary-3 dir
+    !/supabase
