--- a/supbase/helm-release-supabase.yaml
+++ b/supbase/helm-release-supabase.yaml
@@ -1,18 +1,19 @@
+
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: supabase-rel 
+  name: supabase
   namespace: supabase
 spec:
   interval: 5m 
   chart:
     spec:
       chart: supabase
-      # version : 0.3.15
+      version : 0.1.0
       sourceRef:
         kind: HelmRepository
-        name: helm-repo-supabase
-        namespace: supabase
+        name: improwised-helm-source
+        namespace: flux-system
   values:
     secret:
       jwt:
