--- a/supbase/helm-release-supabase.yaml
+++ b/supbase/helm-release-supabase.yaml
@@ -12,8 +12,8 @@ spec:
       version : 0.1.0
       sourceRef:
         kind: HelmRepository
-        name: improwised-helm-source
-        namespace: flux-system
+          name: helm-repo-supabase
+          namespace: supabase
   values:
     secret:
       jwt:
