--- a/supbase/git_kustomization.yaml
+++ b/supbase/git_kustomization.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m0s
-  path: ./supabase
+  path: ./
   prune: true
   sourceRef:
     kind: GitRepository
