--- a/supbase/helm-release-supabase.yaml
+++ b/supbase/helm-release-supabase.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
@@ -46,7 +45,7 @@ spec:
         initialDelaySeconds: 3
       persistence:
         enabled: true
-        storageClassName: "longhorn"
+        storageClassName: "localpath"
 
     studio:
       image:
@@ -102,7 +101,7 @@ spec:
         initialDelaySeconds: 3
       persistence:
         enabled: true
-        storageClassName: "longhorn"
+        storageClassName: "localpath"
 
     imgproxy:
       image:
@@ -117,7 +116,7 @@ spec:
         initialDelaySeconds: 3
       persistence:
         enabled: true
-        storageClassName: "longhorn"
+        storageClassName: "localpath"
 
     kong:
       image:
